# vsearch-plus

./: .clang-format  .gitignore  AGENTS.md  Makefile  README.md  cluster_unoise_paired_parity.md  environment.yml  five_command_lowlevel_and_header_parity.md  get_rdp_classifier.py  pyproject.toml  rdp_tav_taxonomy  rdp_tav_taxonomy.py  tav_extension_implementation_log.md  uchime3_denovo_paired_parity.md
.github/workflows/: build-and-test.yml  release-and-sync-bioconda.yml
conda/recipes/: README.md
cpp/: README.md
cpp/src/: Makefile.am  allpairs.cc  allpairs.h  arch.cc  bitmap.h  chimera_paired.cc  chimera_paired.h  cut.cc  cut.h  db.cc  db.h  dbhash.cc  dbhash.h  dbindex.h  dynlibs.cc  (+45 more)
data/: README.md
docs/: README.md  compiled_docs.docx  compiled_docs.md  unified.md
java/: README.md
python/: README.md  get_rdp_classifier.py  rdp_tav_taxonomy.py
scripts/: build_cpp.sh  build_java.sh  dev_env.sh  get_rdp_classifier.py  rdp-classifier  release_conda.sh  stage_install.sh  vsearch-plus  vsearch-plus-rdp-download  vsearch-plus-rdp-tav
src/: Makefile.am  align_simd.cc  align_simd.h  arch.cc  arch.h  attributes.cc  attributes.h  bitmap.cc  chimera.cc  chimera.h  chimera_paired.cc  city.cc  city.h  cluster.cc  cluster.h  cluster_paired.cc  cluster_paired.h  cpu.cc  cpu.h  cut.cc  db.cc  db.h  dbindex.cc  dbindex_paired.cc  dbindex_paired.h  derep.cc  derep.h  derep_paired.cc  derep_paired.h  derep_prefix.cc  derep_prefix.h  derep_smallmem.h  dynlibs.cc  eestats.cc  eestats.h  fasta.h  fasta2fastq.cc  fastq.h  fastq_join.h  fastq_mergepairs.cc  (+44 more)
tests/: README.md
(+65 files in other folders)
